tests/baselines/reference/withStatementNestedScope.errors.txt
==== tests/cases/compiler/withStatementNestedScope.ts (1 errors) ====
    var x = 1;
    with (x) {
          ~
!!! withStatementNestedScope.ts(2,7): error TS2135: All symbols within a with block will be resolved to 'any'.
        function f(a: number) {
            return 1;
        }
        // should be any
        var r = f(1);
    }